# abstrakt-deck

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: audio.rs  bezold.rs  bundles.rs  cell.rs  color.rs  cylinder.rs  echo_composite.rs  explosion_overlay.rs  explosions.rs  grid.rs  help_overlay.rs  influencer.rs  main.rs  menu_bar.rs  micro_swirl.rs  midi.rs  myocyte_camera.rs  myocyte_color.rs  myocyte_preprocess.rs  myocyte_render.rs  myocyte_sort.rs  phantom.rs  pitch.rs  prime_helix.rs  qbist.rs  recorder.rs  shape.rs
src/influencer/: audio_cells.rs  audio_wheel.rs  authored.rs  gray_scott.rs  mod.rs  prime_activation.rs
src/shaders/: bezold.wgsl  blackhole.wgsl  blit.wgsl  composite.wgsl  distortion_plus.wgsl  explosion_overlay.wgsl  frame.wgsl  fullscreen.wgsl  kaleido.wgsl  micro_swirl.wgsl  myocyte_splat.wgsl  overlay.wgsl  painter_audio_paint.wgsl  painter_huestripe.wgsl  painter_image.wgsl  painter_plasma.wgsl  painter_print_head.wgsl  painter_skin.wgsl  painter_spiral.wgsl  palette.wgsl  phantom_chroma.wgsl  ribbon_composite.wgsl  ribbons.wgsl  shape.wgsl  shape_effects.wgsl  spin_trail.wgsl
tools/: generate_cheat_sheet.py  pitch_smoke_audio.py  verify_key_tracker.py
